@@ -17,6 +17,7 @@ Change log next version
 * Upgraded Groovy to version from version 2.3.2 to 2.3.6.
 * Made it possible to configure whether to automatically append charset to content-type for streaming content using the EncoderConfig (issue 345).
 * Support for request attributes in spring-mock-mvc (thanks to Jacek Kunicki for the pull request)
+* JsonSchemaValidator no longer parse URI's and URL's as JsonNode's by default since prevented resolving relative $ref in a parent schema. This is configurable using the JsonSchemaValidatorSettings (issue 346).
 
 Change log 2.3.2 (2014-06-09)
 -----------------------------
